# food_inflation

./: analysis.ipynb  food_inflation.ipynb  food_inflation_plotly (2).ipynb  main.py  pyproject.toml  wfp_markets_nga.csv
